<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/light_purple"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_within_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bus_stop_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_medium_regular"
            android:text="@string/bus_stop_name_placeholder"
            android:textColor="@color/white"
            android:textSize="12sp"

            android:layout_marginStart="30dp"
            android:layout_marginBottom="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bus_stop_road_textview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <TextView
            android:id="@+id/bus_stop_road_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_light_regular"
            android:text="@string/bus_stop_road_placeholder"
            android:textColor="@color/white"
            android:textSize="11sp"

            app:layout_constraintStart_toStartOf="@id/bus_stop_name_textview"
            app:layout_constraintBottom_toTopOf="@+id/bus_stop_code_textview"
            app:layout_constraintTop_toBottomOf="@+id/bus_stop_name_textview" />

        <TextView
            android:id="@+id/bus_stop_code_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_light_regular"
            android:text="@string/bus_stop_code_placeholder"
            android:textColor="@color/white"
            android:textSize="11sp"

            app:layout_constraintStart_toStartOf="@id/bus_stop_name_textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bus_stop_road_textview"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>