<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_purple">

    <TextView
        android:id="@+id/bus_number_textview"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/bus_number_placeholder"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/circularstd_medium_regular"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bus_timing_1_constraintlayout"
        android:layout_width="30dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bus_timing_2_constraintlayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bus_number_textview"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bus_number_1_time_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_bold_regular"
            android:gravity="center_horizontal"
            android:text="@string/bus_timing_placeholder_1"
            android:textColor="@color/white"
            android:textSize="16sp"

            app:layout_constraintBottom_toTopOf="@+id/bus_number_1_load_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:id="@+id/bus_number_1_load_view"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="@color/light_load"

            app:layout_constraintBottom_toTopOf="@+id/bus_number_1_type_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bus_number_1_time_textview" />

        <TextView
            android:id="@+id/bus_number_1_type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_light_italic"
            android:gravity="center_horizontal"
            android:text="@string/bus_type_placeholder_1"
            android:textColor="@color/white"

            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bus_number_1_load_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bus_timing_2_constraintlayout"
        android:layout_width="30dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bus_timing_3_constraintlayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bus_timing_1_constraintlayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bus_number_2_time_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_bold_regular"
            android:gravity="center_horizontal"
            android:text="@string/bus_timing_placeholder_2"
            android:textColor="@color/white"
            android:textSize="16sp"

            app:layout_constraintBottom_toTopOf="@+id/bus_number_2_load_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:id="@+id/bus_number_2_load_view"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="@color/medium_load"

            app:layout_constraintBottom_toTopOf="@+id/bus_number_2_type_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bus_number_2_time_textview" />

        <TextView
            android:id="@+id/bus_number_2_type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_light_italic"
            android:gravity="center_horizontal"
            android:text="@string/bus_type_placeholder_2"
            android:textColor="@color/white"

            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bus_number_2_load_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bus_timing_3_constraintlayout"
        android:layout_width="30dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bus_timing_2_constraintlayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bus_number_3_time_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_bold_regular"
            android:gravity="center_horizontal"
            android:text="@string/bus_timing_placeholder_3"
            android:textColor="@color/white"
            android:textSize="16sp"

            app:layout_constraintBottom_toTopOf="@+id/bus_number_3_load_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:id="@+id/bus_number_3_load_view"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="@color/heavy_load"

            app:layout_constraintBottom_toTopOf="@+id/bus_number_3_type_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bus_number_3_time_textview" />

        <TextView
            android:id="@+id/bus_number_3_type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_light_italic"
            android:gravity="center_horizontal"
            android:text="@string/bus_type_placeholder_3"
            android:textColor="@color/white"

            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bus_number_3_load_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>